# durable_agent

./: .env  README.md  pyproject.toml
__MACOSX/frontend/: ._vite.config.js
activities/: activities.py
api/: main.py
frontend/: package-lock.json
frontend/src/components/: ConfirmInline.jsx  MessageBubble.jsx
frontend/src/pages/: App.jsx
generated_pages/: blog.html  first.html  harsh.html  ironman.html  landing-page.html  landingpage.html  minimal_blog.html  neural-networks-history.html  portfolio.html
models/: core.py
prompts/: agent_prompt_generators.py  prompts.py
scripts/: create_invoice_test.py  find_events_test.py  search_flights_test.py
shared/: config.py
tools/: assemble_webpage.py  build_interactivity.py  build_structure.py  build_styles.py  explain_webpage.py  gather_requirements.py  generate_webpage.py  goal_registry.py  plan_webpage.py  quality_check.py  refine_webpage.py  save_webpage.py  tool_registry.py
worker/: worker.py
workflows/: agent_goal_workflow.py  workflow_helpers.py
