[project]
name = "temporal-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.128.8",
    "jinja2>=3.1.6",
    "litellm>=1.81.16",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "stripe>=14.4.0",
    "temporalio>=1.18.2",
    "uvicorn>=0.39.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Tell hatchling what to include
[tool.hatch.build.targets.wheel]
packages = ["activities", "api", "models", "prompts", "shared", "tools", "workflows"]